Adding Cards Working Again

--- a/MagicCollection/MagicCollection.vcxproj
+++ b/MagicCollection/MagicCollection.vcxproj
@@ -160,7 +160,7 @@
     <ClCompile Include="CollectionSource.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="CopyItem.cpp" />
-    <ClCompile Include="ItemCollection.cpp" />
+    <ClCompile Include="Collection.cpp" />
     <ClCompile Include="jsoncpp.cpp" />
     <ClCompile Include="JSONImporter.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
@@ -190,7 +190,7 @@
     <ClInclude Include="CollectionSource.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="CopyItem.h" />
-    <ClInclude Include="ItemCollection.h" />
+    <ClInclude Include="Collection.h" />
     <ClInclude Include="JSONImporter.h" />
     <ClInclude Include="ListHelper.h" />
     <ClInclude Include="MD5.h" />
