--- a/MagicCollection/MagicCollection.vcxproj
+++ b/MagicCollection/MagicCollection.vcxproj
@@ -155,10 +155,13 @@
   <ItemGroup>
     <ClCompile Include="Action.cpp" />
     <ClCompile Include="Addresser.cpp" />
+    <ClCompile Include="CollectionDeltaClass.cpp" />
+    <ClCompile Include="CollectionDetails.cpp" />
     <ClCompile Include="CollectionFactory.cpp" />
     <ClCompile Include="CollectionIO.cpp" />
     <ClCompile Include="CollectionItem.cpp" />
     <ClCompile Include="CollectionSource.cpp" />
+    <ClCompile Include="CollectionTracker.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="CopyItem.cpp" />
     <ClCompile Include="Collection.cpp" />
@@ -185,10 +188,13 @@
   <ItemGroup>
     <ClInclude Include="Action.h" />
     <ClInclude Include="Addresser.h" />
+    <ClInclude Include="CollectionDeltaClass.h" />
+    <ClInclude Include="CollectionDetails.h" />
     <ClInclude Include="CollectionFactory.h" />
     <ClInclude Include="CollectionIO.h" />
     <ClInclude Include="CollectionItem.h" />
     <ClInclude Include="CollectionSource.h" />
+    <ClInclude Include="CollectionTracker.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="CopyItem.h" />
     <ClInclude Include="Collection.h" />
